[fix] fixed overflowed height not showing

--- a/src/Cocktails/CocktailWrapper.module.scss
+++ b/src/Cocktails/CocktailWrapper.module.scss
@@ -1,6 +1,7 @@
 .CocktailWrapper {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  min-height: 100vh;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
